<resources>
    <string name="app_name">MiStoriyy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storiy">tambahkan storiy</string>
    <string name="title_home">home</string>
    <string name="title_notifications">notifications</string>
    <string name="email_error">email error</string>
    <string name="failed_start_camera">failed start camera</string>
    <string name="failed_take_photo">failed take photo</string>
    <string name="password_error_length">password error lenght</string>
    <string name="failed_load_story_detail">failed load story detail\n</string>
    <string name="photo_picker_title">photo picker title</string>
    <string name="no_photo_selected">no photo selected</string>
    <string name="camera_title">camera title</string>
    <string name="acces_granted">acces granted\n\t</string>
    <string name="acces_denied">acces denied</string>
    <string name="add_story_failed_dialog">add story failed dialog</string>
    <string name="pick_or_capture_photo_dialog">pick or capture photo dialog</string>
    <string name="register_succes">signup succes</string>
    <string name="register_error">signup error\n</string>
    <string name="register_error_with_error_messege">signup error</string>
    <string name="username">username</string>
    <string name="namauser">namauser</string>
    <string name="ganti_bahasa">change language</string>
    <string name="logout">keluar</string>
    <string name="tell_yourstory">Apa Ceritamu</string>
    <string name="add_storiy">add storiy</string>
    <string name="title_welcome_page">Selamat datang di Storiyku</string>
    <string name="message_welcome_page">Sini Cerita</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="app_icon">app icon</string>
    <string name="title_signup_page">tittle sign up</string>
    <string name="register">sign up</string>
    <string name="sudah_siap_untuk_cerita">"sudah siap cerita? "</string>
    <string name="masukkan_datamu_dulu_ya">masukan data dulu ya</string>
    <string name="string_login">Login</string>
    <string name="create_by_name">create by name</string>
    <string name="story_description">story description</string>
    <string name="icon_switch_camera">switch camera</string>
    <string name="icon_take_photo">take photo</string>
    <string name="failed_upload_photo">failed upload photo</string>
    <string name="failed_load_story">failed laod story</string>
    <string name="dialog_login_succes">dialog login succes</string>
    <string name="message_login_failed">dialog login failed</string>
    <string name="login_failed_dialog">login failed dialog</string>
    <string name="galeri">gallery</string>
    <string name="kamera">kamera</string>
    <string name="confirmation">konfirmasi</string>
    <string name="logout_title">judul keluar</string>
    <string name="logout_confirmation">konfirmasi keluar</string>
    <string name="yes">ya</string>
    <string name="no">tidak</string>
    <string name="hint_username">username</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="item_error_text">gagal memuat cerita</string>
    <string name="retry_item_story">coba lagi</string>
    <string name="title_storiy">TITLE STORY</string>
</resources>